# qsolv_softener

./: AGENT.md  IMPLEMENTATION.md  README.md  pyproject.toml  qeq.txt
examples/: soften_example.py  test_filtered_atoms.py  test_new_features.py
src/qsolv_softener/: __init__.py  core.py  utils.py
