[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qsolv-softener"
version = "0.1.0"
description = "Charge softening for solute atoms based on solvent environment with QEq equilibration"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "qsolv_softener contributors"}
]
keywords = ["computational chemistry", "ASE", "charge equilibration", "QEq", "solvation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
    "ase>=3.22.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/qsolv_softener"
Documentation = "https://github.com/yourusername/qsolv_softener#readme"
Repository = "https://github.com/yourusername/qsolv_softener"

[tool.hatch.build.targets.wheel]
packages = ["src/qsolv_softener"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
